public enum Disability {
  YES, NO
}
