public class DisabilityToilet extends Bath {
}
