public class Toilet extends Bath {
}
