public class Urinal extends Bath {
}
